[package]
name = "nget"
version = "0.1.0"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
description = "Nix-instantiate helper"
edition = "2018"
license = "MIT"

[dependencies]
clap = { version = "2.33.0", features = [ "yaml" ] }
env_logger = "0.6.1"
log = "0.4.6"
failure = "0.1.5"

[profile.release]
lto = "thin"
opt-level = "z"
